# Memguard

./: CHANGELOG.md  CORRECTION_NOTICE.md  LICENSE  README.md  __init__.py  audit.py  callback.py  cli.py  core.py  pyproject.toml
src/insacermo_memguard/: __init__.py  audit.py  callback.py  cli.py  core.py
tests/: test_audit.py  test_core.py
