[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insacermo-memguard"
version = "0.3.0rc1"
description = "Experimental conservative overfitting guard for Hugging Face training logs"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Benjamin Lenoir"}]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
hf = ["transformers>=4.40", "huggingface_hub>=0.23"]
dev = ["pytest>=8", "build>=1.2"]

[project.scripts]
insacermo-memguard = "insacermo_memguard.cli:main"
memguard-insacermo = "insacermo_memguard.cli:main"

[project.urls]
Repository = "https://github.com/benblak/Memguard"
Issues = "https://github.com/benblak/Memguard/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
